crates/usfm_parser/tests/snapshots/tcdocs__specExamples_extended_sidebars.snap
---
source: usfm_parser/tests/snapshot.rs
description: "\\id MRK - Good News Study Bible - Notes Material\n\\c 1\n\\p\n\\v 18 At once they left their nets and went with him.\n\\esb \\cat History\\cat*\n\\ms Fish and Fishing\n\\p In Jesus' time, fishing took place mostly on lake Galilee, because Jewish people\ncould not use many of the harbors along the coast of the Mediterranean Sea, since these\nharbors were often controlled by unfriendly neighbors. The most common fish in the Lake\nof Galilee were carp and catfish. The Law of Moses allowed people to eat any fish with\nfins and scales, but since catfish lack scales (as do eels and sharks) they were not to\nbe eaten (\\xt Lev 11.9-12\\xt*). Fish were also probably brought from Tyre and Sidon,\nwhere they were dried and salted.\n...\n\\p Among early Christians, the fish was a favorite image for Jesus, because the Greek\nword for fish (\\tl ichthus\\tl*) consists of the first letters of the Greek words that\ntell who Jesus is: \\fig Christian Fish Image\\fig*\n\\esbe\n\\p\\v 19 He went a little farther on and saw two other brothers, James and John,\nthe sons of Zebedee."
snapshot_kind: text
---
Book MRK "- Good News Study Bible - Notes Material" @0..48
ChapterStart 1@49..53
Para p@54..111
  VerseStart 18@57..62
  Text "At once they left their nets and went with him."@63..111
  VerseEnd 18
Sidebar esb@111..940 category="History"@116..133
  Para ms@134..155
    Text "Fish and Fishing"@138..155
  Para p@155..713
    Text "In Jesus' time, fishing took place mostly on lake Galilee, because Jewish people could not use many of the harbors along the coast of the Mediterranean Sea, since these harbors were often controlled by unfriendly neighbors. The most common fish in the Lake of Galilee were carp and catfish. The Law of Moses allowed people to eat any fish with fins and scales, but since catfish lack scales (as do eels and sharks) they were not to be eaten ("@158..600
    Char xt@600..619
      Text "Lev 11.9-12"@604..615
    Text "). Fish were also probably brought from Tyre and Sidon, where they were dried and salted. ..."@619..713
  Para p@713..935
    Text "Among early Christians, the fish was a favorite image for Jesus, because the Greek word for fish ("@716..814
    Char tl@814..829
      Text "ichthus"@818..825
    Text ") consists of the first letters of the Greek words that tell who Jesus is: "@829..904
    Char fig@904..934
      Text "Christian Fish Image"@909..929
Para p@941..1041
  VerseStart 19@943..948
  Text "He went a little farther on and saw two other brothers, James and John, the sons of Zebedee."@949..1041
  VerseEnd 19
ChapterEnd 1
